# go-ray

./: .gitignore  README.md  app.go  ffi.py  funccall.go  go.mod  go.work  main.py  mkdocs.yml  pyproject.toml  ray.go  run.sh
.github/workflows/: deploy-py-docs.yml  lint.yml  publish.yml  testing.yml
codegen/: go.mod  main.go
docs/: README.md  crosslang.md  crosslang_types.md  readme-ai.md
examples/: README.md  app.go  app.py  gen.sh  go.mod  go.sum  ray_workloads_wrapper.go  run.sh
examples/basic/: app.go  ray_workload_wrappers.go  run.sh
examples/benchmark/: main.go
examples/bug/: bug.go
examples/crosslang/: app.go  app.py  cross.py  run.sh
examples/service/: app.go
examples/t1/: main.go  ray_workloads_wrapper.go
ffi/: ffi.go
generic/: futures.go  remote.go
goray/: __init__.py  actor.py  actor_wrappers.py  cli.py  common.py  consts.py  funccall.py  go2py.py  handlers.py  index.md  object.py  py2go.py  registry.py  state.py  task.py  utils.py
goray/raycore/: __init__.py  actor.py  actor_wrappers.py  common.py  go2py.py  handlers.py  object.py  py2go.py  registry.py  task.py
goray/x/: README.md  __init__.py  actor.py  cmds.py  ffi.py  handlers.py
gorayffi/: __init__.py  actor.py  cmds.py  consts.py  ffi.py  funccall.py  handlers.py  readme.md  registry.py  utils.py
pydriver/: api.py  app.py  consts.py  ffi.py  funccall.py  libpath.py  main.py  state.py  utils.py
pydriver/raycore/: __init__.py  actor.py  go2py.py  (+1 more)
ray/: actor.go  actor.md  consts.go  error_code.go  errors.go  funccall.go  gen_object_ref.py  get.go  go.mod  go.sum  localcall.go  object_ref.go  options.go  pytask.go  ray.go  remote_call.go  remote_call_test.go  spec.md  task.go  utils.go  utils_test.go
tests/: README.md  complex_types.go  concurrent_execution.go  error_handling.go  go.mod  go.sum  hello_world.go  low_level.go  main.go  object_store.go  performance.go  run.sh  task_options.go
(+53 files in other folders)
