[project]
name = "goray"
description = "Python driver for GoRay project"
version = "1.0.0"
authors = [
    { name = "WeiminWang", email = "wang0.618@qq.com" }
]
dependencies = ["msgpack"]

[project.optional-dependencies]
ray = [
    "ray[default]"
]

[project.urls]
Homepage = "https://github.com/ray4go/go-ray"

[tool.setuptools.packages.find]
where = ["."]
include = ["goray*"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project.scripts]
goray = "goray.cli:main"