[project]
name = "goray"
description = "Python driver for GoRay project"
version = "1.0.0"
authors = [
    { name = "WeiminWang", email = "wang0.618@qq.com" }
]
dependencies = ["msgpack"]

[project.optional-dependencies]
ray = [
    "ray[default]"
]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0"
]

[project.urls]
Homepage = "https://github.com/ray4go/go-ray"

[tool.setuptools.packages.find]
where = ["."]
include = ["goray", "gorayffi"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project.scripts]
goray = "goray.cli:main"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "build",
    "output",
    "examples",
    "tests",
]
